# terminal-snake

./: README.md  cabal.project.freeze  snake.cabal  snake.hs  stack.yaml  terminal-snake.cabal
app/: Main.hs
